--- a/Studies/Chemistry/1.1 Significant Figures 27 Aug.md
+++ b/Studies/Chemistry/1.1 Significant Figures 27 Aug.md
@@ -32,3 +32,50 @@
 		2)  Irrational numbers: these are real numbers that cannot be expressed as ratio of integers.
       *Any number i.e. not exact is called inexact*
       
+
+7) for any value written in scientific notation:
+         exampple:	A x 10 ^x
+		A - arguement/coefficient
+		x - is an exact number
+		10 is the base
+		and for a number thats shown like this the number of sig figs is the number of sigfigs A has
+		for a number like this the no, of sig figs is determined by applying the above rules only to the value of A (arguement/coefficient)
+
+		ex: 	4.5 x 10^3 -> 2 sig figs
+		1=< argument/coeff < 10
+
+		ex: 4.50 x 10^3 -> 3 sigfigs
+
+
+
+# Applying rules of sig figs in calculations.
+
+1. In addition and subtraction the answer cannot have more digits to the right of the decimal point than in original number with the smallest number of digits to the right of the decimal point.
+	(keep track of decimals)
+	
+	example: 	101.70 + 0.252 = 101.952
+			2 decimal in first number and 3 decimals in 2nd number 
+			so the final asnwer should have two decimals
+ 			so the last '2' is removed from the result because of 'rounddown'
+
+	* If the answer tot heabove example was:
+	101.957 -roundup> 101.96 woould have been the answer
+	*same for subtraction
+
+2. In multiplication and division, the number of sig figs in the final asnwer is determined by the original mumber that has the smallest number of sigfigs
+	(keep track of sigfigs in this case)
+	
+	example:	1.4 x 8.011 = 11.2154 >>> 11
+	1.4 has 2 sigfigs, 8.011 has 4 sig figs thus the answer should have 2 sig figs
+	the final answer is 11 - cause 11 has 2 sigfigs
+	* if the answer to the above example was:
+	11.715 than wed have to round up the 7 
+	and final answer would have  been 12 
+
+3. Exact numbers have infinite num of sig f3. Exact numbers have infinite num of sig f3. Exact numbers have infinite num of sig fig, they do not limit the number of sig fig in a calculation 
+		ex: 1 inch = 2.54 cm
+		then 2.5 x 2.54 cm = 6.35 cm >>> 6.4cm(rounded up)
+		2.5 is inexact and 2.54 is exact
+		this is multiplication, we keep track of sigfigs
+4. In calculations with multiple steps, retain (keep) at least one extra digit (or more) until the end of the calculatons and account for the sig figs/ decmimals at the very end.
+		example: ()
